# etc_khu_group

./: README.md  index.md  pyproject.toml
MSE-ETC/: calculation.py  functions.py  gui.py  initial_values.py  interpolate.py  main.py  output.py  parameters.py
MSE-ETC/SKY/: skytable_Green_pwv1.0_AM1_3650.fits  skytable_Green_pwv2.5_AM1_3650.fits  skytable_Green_pwv7.5_AM1_3650.fits  skytable_NIR_pwv1.0_AM1_3600.fits  skytable_NIR_pwv2.5_AM1_3600.fits  skytable_NIR_pwv7.5_AM1_3600.fits  skytable_Red_pwv1.0_AM1_3600.fits  skytable_Red_pwv2.5_AM1_3600.fits  skytable_Red_pwv7.5_AM1_3600.fits  skytable_pwv1.0_AM1_Blue_2550.fits  skytable_pwv2.5_AM1_Blue_2550.fits  skytable_pwv7.5_AM1_Blue_2550.fits
mse_etc/: convolution.py  convolution_HR.py  convolution_OH.py  convolution_OH_new.py  functions.py  gui.py  initial_values.py  interpolate.py  main.py  output.py  parameters.py  throughputs.py
mse_etc/SKY/: MSE_AM1_box_NIR_MR.fits  MSE_AM1_box_blue_HR.fits  MSE_AM1_box_blue_MR.fits  MSE_AM1_box_green_HR.fits  MSE_AM1_box_green_MR.fits  MSE_AM1_box_nir.fits  MSE_AM1_box_red_HR.fits  MSE_AM1_box_red_MR.fits  MSE_AM1_pwv2.5_50000.fits
mse_etc/convolution/: convolution.py  convolution_HR.py
mse_etc/data/: Kim_IGRINS_OH_H_40000.fits  result_MSE_pwv1.0_NIR_6000.fits  result_MSE_pwv1.0_blue_400.fits  result_MSE_pwv1.0_blue_4400.fits  result_MSE_pwv1.0_green_482.fits  result_MSE_pwv1.0_green_6200.fits  result_MSE_pwv1.0_red_6100.fits  result_MSE_pwv1.0_red_767.fits  result_MSE_pwv2.5_NIR_6000.fits  result_MSE_pwv2.5_blue_400.fits  result_MSE_pwv2.5_blue_4400.fits  (+31 more)
(+110 files in other folders)
