[tool.poetry]
name = "MSE-ETC"
version = "1.2.2"
description = "MSE Exposure Time Calculator"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.19.5"
scipy = "1.6.1"
astropy = "4.2.1"
matplotlib = "3.3.3"
isort = "^5.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
